--- a/taqueriaposapp/static/css/style.css
+++ b/taqueriaposapp/static/css/style.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0;
     padding: 0;
@@ -7,7 +8,7 @@ body{
     background-color: black;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.5rem;
-    color: #161515;
+    color: #151515;
 }
 
 .flex {
@@ -18,6 +19,14 @@ body{
     justify-content: space-between;
 }
 
+.justify-center{
+    justify-content: center;
+}
+
+.align-center{
+    align-items: center;
+}
+
 .info-bar {
     display: flex;
     justify-content: space-between;
@@ -25,7 +34,9 @@ body{
     color: #e7e7e7;
 }
 
+
 .content{
+    display: flex;
     height: calc(100vh - 56px);
     max-height: calc(100vh - 56px);
     margin: 0 5px;
@@ -34,4 +45,39 @@ body{
     border-top-right-radius: 15px;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
+}
+
+.login-wrapper {
+    border: solid 3px #151515;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    max-width: 50vw;
+}
+
+.pad-view{
+    display: flex;
+    justify-content: center;
+    margin: 5px 0;
+}
+
+.pad-view input{
+    font-size: 50px;
+    line-height: 50px;
+    height: 50px;
+    width: 250px;
+    text-align: center;
+}
+
+.number-pad {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.number-pad input{
+    flex: 1 0 33.3333%;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 40px;
 }
