--- a/taqueriaposapp/templates/layouts/base.html
+++ b/taqueriaposapp/templates/layouts/base.html
@@ -24,6 +24,7 @@
         <p>Connected</p>
         <p>V : 1.0.0</p>
     </div>
+    <script src="{{url_for('static', filename='js/main.js')}}"></script>
 </body>
 
 </html>
