--- a/taqueriaposapp/user/templates/user/login.html
+++ b/taqueriaposapp/user/templates/user/login.html
@@ -2,11 +2,39 @@
 
 
 {% block content %}
-<form action="" method="POST">
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.username.label }}
-        {{ form.username() }}
-    </p>
-</form>
+<div class="info-bar">
+    <p>User: username</p>
+    <p><span id="getMonth"></span> <span id="getMonthDay"></span></p>
+    <p>8:57PM</p>
+</div>
+<div class="content justify-center align-center">
+    <div class="login-wrapper">
+        <form action="" method="POST">
+            {{ form.hidden_tag() }}
+            <div class="pad-view">
+                <input id="keypadVar" type="password">
+            </div>
+            <div class="number-pad">
+                <input type="button" value="1" onClick="addNumber(this);">
+                <input type="button" value="2" onClick="addNumber(this);">
+                <input type="button" value="3" onClick="addNumber(this);">
+                <input type="button" value="4" onClick="addNumber(this);">
+                <input type="button" value="5" onClick="addNumber(this);">
+                <input type="button" value="6" onClick="addNumber(this);">
+                <input type="button" value="7" onClick="addNumber(this);">
+                <input type="button" value="8" onClick="addNumber(this);">
+                <input type="button" value="9" onClick="addNumber(this);">
+                <input type="reset" value="Clear">
+                <input type="button" value="0" onClick="addNumber(this);">
+                <input type="submit" value="Enter">
+            </div>
+        </form>
+
+    </div>
+</div>
+<div class="info-bar">
+    <p>172.16.0.105</p>
+    <p>Connected</p>
+    <p>V : 1.0.0</p>
+</div>
 {% endblock %}
