user login and registration

--- a/taqueriaposapp/core/templates/core/index.html
+++ b/taqueriaposapp/core/templates/core/index.html
@@ -2,9 +2,11 @@
 
 
 {% block content %}
-{% if title %}
-<h1>{{ title }} Page..</h1>
-{% else %}
-<h1>Sorry this page has no title...</h1>
-{% endif %}
+<div class="content">
+    {% if title %}
+    <h1>{{ title }} Page..</h1>
+    {% else %}
+    <h1>Sorry this page has no title...</h1>
+    {% endif %}
+</div>
 {% endblock %}
