--- a/taqueriaposapp/user/templates/user/pointofsale.html
+++ b/taqueriaposapp/user/templates/user/pointofsale.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<!-- main page style -->
 <style>
     .wrapper {
         display: grid;
@@ -75,39 +76,60 @@
       }
 </style>
 
-<form action="", method="POST">
-    {{ form.hidden_tag() }}
-    <div class="wrapper">
-        <div class="cart">
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+<!-- taco onClick jquery script-->
+<script type=text/javascript>
+    $(function() {
+      $('a#tacoButton').bind('click', function() {
+        $.getJSON('/user/addCartItem', {
+          itemName: "tacos",
+        }, function(data) {
+          $("#result").text(data.result);
+          location.reload();
+        });
+        return false;
+      });
+    });
+</script>
+
+
+<div class="wrapper">
+    <div class="cart" id="cart">
+        <p id=result>
             {% for item in cartList %}
-                <p>{{ item }} </p>
+            <p>{{ item[0], item[1]}} </p>
             {% endfor %}
-        </div>
-        <div class="one">
-            <button type = "submit" name = "tacos" value = "tacoImage">
-            <img src="{{ url_for('static', filename='images/tacos.jpg')}}" width="100" height ="50"/></button>
-        </div>
-        <div class="two">
-            <button type = "submit" name = "tortas" value = "tortaImage">
-            <img src="{{ url_for('static', filename='images/tortas.jpg')}}" width="100" height ="50"/></button>
-        </div>
-        <div class="three">
-            <button type = "submit" name = "hamburguesas" value = "hamburguesasImage">
-            <img src="{{ url_for('static', filename='images/hamburguesa.jpg')}}" width="100" height ="50"/></button>
-        </div>  
-        <div class="four">
-            <button type = "submit" name = "tapatios" value = "tapatiosImage">
-            <img src="{{ url_for('static', filename='images/tapatios.jfif')}}" width="100" height ="50"/></button>
-        </div>
-        <div class="five">
-            <button type = "submit" name = "gorditas" value = "gorditasImage">
-            <img src="{{ url_for('static', filename='images/gorditas.jpg')}}" width="100" height ="50"/></button>
-        </div>
-        <div class="six">
-            <button type = "submit" name = "quesadillas" value = "quesadillasImage">
-            <img src="{{ url_for('static', filename='images/quesadillas.jfif')}}" width="100" height ="50"/></button>
-        </div>
+        </p>
     </div>
-</form>
+    <div class="one">
+        <form>
+            <a href="#" id=tacoButton>
+                <button type = "submit" name = "tacos" value = "tacoImage">
+                    <img src="{{ url_for('static', filename='images/tacos.jpg')}}" width="100" height ="50"/></button></a>
+        </form>
+    </div>
+    <div class="two">
+        <button type = "submit" name = "tortas" value = "tortaImage">
+        <img src="{{ url_for('static', filename='images/tortas.jpg')}}" width="100" height ="50"/></button>
+    </div>
+    <div class="three">
+        <button type = "submit" name = "hamburguesas" value = "hamburguesasImage">
+        <img src="{{ url_for('static', filename='images/hamburguesa.jpg')}}" width="100" height ="50"/></button>
+    </div>  
+    <div class="four">
+        <button type = "submit" name = "tapatios" value = "tapatiosImage">
+        <img src="{{ url_for('static', filename='images/tapatios.jfif')}}" width="100" height ="50"/></button>
+    </div>
+    <div class="five">
+        <button type = "submit" name = "gorditas" value = "gorditasImage">
+        <img src="{{ url_for('static', filename='images/gorditas.jpg')}}" width="100" height ="50"/></button>
+    </div>
+    <div class="six">
+        <button type = "submit" name = "quesadillas" value = "quesadillasImage">
+        <img src="{{ url_for('static', filename='images/quesadillas.jfif')}}" width="100" height ="50"/></button>
+    </div>
+</div>
 
 {% endblock %}
