commits order and orderdetails to db

--- a/taqueriaposapp/user/templates/user/pointofsale.html
+++ b/taqueriaposapp/user/templates/user/pointofsale.html
@@ -84,7 +84,7 @@
     $(function() {
       $('.itemOptionAction').bind('click', function() {
         $.getJSON('/user/addCartItem', {
-          itemName: $(this).attr('id'),
+          itemCode: $(this).attr('id'),
         }, function(data) {
           $("#result").text(data.result);
           location.reload();
@@ -99,7 +99,7 @@
     <div class="cart" id="cart">
         <p id=result>
             {% for item in cartList %}
-            <p>{{ item[0], item[1], item[2] }} </p>
+            <p>{{ item[0], item[1], item[2], item[3] }} </p>
             {% endfor %}
         </p>
         <form action="" method="POST">
@@ -109,13 +109,13 @@
     </div>
     <div class="one">
         <form>
-            <a href="#" id=tacoButton class="itemOptionAction">
+            <a href="#" id=101 class="itemOptionAction">
                 <button type = "submit" name = "tacos" value = "tacoImage">
                     <img src="{{ url_for('static', filename='images/tacos.jpg')}}" width="100" height ="50"/></button></a>
         </form>
     </div>
     <div class="two">
-        <a href="#" id=tortaButton class="itemOptionAction">
+        <a href="#" id=102 class="itemOptionAction">
             <button type = "submit" name = "tortas" value = "tortaImage">
                 <img src="{{ url_for('static', filename='images/tortas.jpg')}}" width="100" height ="50"/></button></a>
     </div>
