--- a/taqueriaposapp/user/templates/user/pointofsale.html
+++ b/taqueriaposapp/user/templates/user/pointofsale.html
@@ -161,6 +161,25 @@
         display: inline-block;
         font-weight: bold;
       }
+
+
+      /* HIDE RADIO */
+      [type=radio] { 
+        position: absolute;
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+
+      /* IMAGE STYLES */
+      [type=radio] + img {
+        cursor: pointer;
+      }
+
+      /* CHECKED STYLES */
+      [type=radio]:checked + img {
+        outline: 2px solid #f00;
+      }
 </style>
 
 
@@ -174,7 +193,6 @@
           itemCode: $(this).attr('id'),
         }, function(data) {
           $("#result").text(data.result);
-          //location.reload();
         });
         return false;
       });
@@ -216,6 +234,25 @@
     $('.popupCloseButton').click(function(){
         $('.hover_bkgr_fricc').hide();
     });
+    $('#quantSubmit').click(function(){
+      $('.hover_bkgr_fricc').hide();
+      location.reload();
+  });
+  });
+</script>
+
+<!-- pop up quantity submit onClick jquery script-->
+<script type=text/javascript>
+  $(function() {
+    $('#quantSubmit').bind('click', function() {
+      $.getJSON('/user/addCartItem', {
+        quantity: document.quantForm.quantity.value,
+      }, function(data) {
+        $("#result").text(data.result);
+        //location.reload();
+      });
+      return false;
+    });
   });
 </script>
 
@@ -224,9 +261,21 @@
   <span class="helper"></span>
   <div>
       <div class="popupCloseButton">&times;</div>
-      <form action="POST" id=quantForm>
-        <input type="text">
-        <input type="submit" value="Enter">
+      <form action="POST" name=quantForm id=quantForm>
+        <input type="text" id='quantity' name='quantity'>
+        <br>
+        <label>
+          <input type="radio" name="pastor" value="small" checked id=201>
+          <img src="{{ url_for('static', filename='images/pastor.jfif')}}" width="50" height="50">
+        </label>
+        
+        <label>
+          <input type="radio" name="pastor" value="big">
+          <img src="{{ url_for('static', filename='images/asada.jfif')}}" width="50" height="50">
+        </label>
+
+        <br>
+        <input type="submit" value="Enter" id='quantSubmit'>
       </form>
   </div>
 </div>
@@ -235,7 +284,7 @@
     <div class="cart" id="cart">
         <p id=result>
             {% for item in cartList %}
-            <p>{{ item[0], item[1], item[2], item[3] }} </p>
+            <p>{{ item[1], item[2], item[3], item[4] }} </p>
             {% endfor %}
         </p>
         <form action="" method="POST">
@@ -258,7 +307,7 @@
       </form>
     </div>
     <div class="two tabcontent entrees">
-        <a href="#" id=102 class="itemOptionAction">
+        <a href="#" id=102 class="itemOptionAction trigger_popup_fricc">
             <button type = "submit" name = "tortas" value = "tortaImage">
                 <img src="{{ url_for('static', filename='images/tortas.jpg')}}" width="100" height ="50"/></button></a>
     </div>
