--- a/taqueriaposapp/user/templates/user/pointofsale.html
+++ b/taqueriaposapp/user/templates/user/pointofsale.html
@@ -242,7 +242,7 @@
   });
 </script>
 
-<!-- pop up quantity submit onClick jquery script-->
+<!-- pop up quantity/meat submit onClick jquery script-->
 <script type=text/javascript>
   $(function() {
     $('#meatSubmit').bind('click', function() {
