--- a/taqueriaposapp/user/templates/user/pointofsale.html
+++ b/taqueriaposapp/user/templates/user/pointofsale.html
@@ -242,30 +242,7 @@
 </script>
 
 <!-- sidemenu tab script-->
-<script>
-  function changeTab(evt, tabName) {
-    // Declare all variables
-    var i, tabcontent, tablinks;
-  
-    // Get all elements with class="tabcontent" and hide them
-    tabcontent = document.getElementsByClassName("tabcontent");
-    for (i = 0; i < tabcontent.length; i++) {
-      tabcontent[i].style.display = "none";
-    }
-  
-    // Get all elements with class="tablinks" and remove the class "active"
-    tablinks = document.getElementsByClassName("tablinks");
-    for (i = 0; i < tablinks.length; i++) {
-      tablinks[i].className = tablinks[i].className.replace(" active", "");
-    }
-  
-    // Show the current tab, and add an "active" class to the button that opened the tab
-    for (i=0; i < document.getElementsByClassName(tabName).length; i++){
-      document.getElementsByClassName(tabName)[i].style.display = "block";
-      evt.currentTarget.className += " active";
-    }
-  }
-</script>
+
 
 <!-- pop up script -->
 <script>
@@ -466,5 +443,7 @@
     </div>
     
 </div>
+
+<script src="{{url_for('static', filename='js/main.js')}}"></script>
 
 {% endblock %}
