moved a js function back to html

--- a/taqueriaposapp/user/templates/user/pointofsale.html
+++ b/taqueriaposapp/user/templates/user/pointofsale.html
@@ -274,6 +274,21 @@
   });
 </script>
 
+<!-- Close the dropdown menu if the user clicks outside of it-->
+<script>
+  window.onclick = function(event) {
+    if (!event.target.matches('.dropbtn')) {
+        var dropdowns = document.getElementsByClassName("dropdown-content");
+        var i;
+        for (i = 0; i < dropdowns.length; i++) {
+        var openDropdown = dropdowns[i];
+        if (openDropdown.classList.contains('show')) {
+            openDropdown.classList.remove('show');
+        }
+        }
+    }
+    }
+</script>
 
 <!-- content inside quantity pop up box-->
 <div class="hover_bkgr_fricc">
